[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "textstat>=0.7.12",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_workspace"]

[tool.hatch.build.targets.sdist]
include = ["src/research_workspace"]
